apps/string-is/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: string-is
spec:
  ports:
    - port: 80
      targetPort: string-is
  selector:
    app.kubernetes.io/name: string-is
